# evedata-infra

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  LICENSE.md  Makefile  README.md  llms.txt  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
docker/signoz/: README.md
docker/signoz/docker/: docker-compose.yaml
terraform/cloudflare/dqt/: backends.tf  verification.tf  versions.tf  zones.tf
terraform/cloudflare/prd/: README.md  backends.tf  email.tf  variables.tf  verification.tf  zones.tf
terraform/gcp/bootstrap/: .terraform.lock.hcl  backends.tf  dqt-iam.tf  dqt-network.tf  dqt-projects.tf  folders.tf  hzl-iam.tf  hzl-network.tf  hzl-projects.tf  log-export.tf  monitoring.tf  org-policy.tf  prd-iam.tf  prd-network.tf  prd-projects.tf  variables.tf  versions.tf
