[project]
dependencies = []
description = "Infrastructure for EVEData"
name = "evedata-infra"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.0"

[dependency-groups]
dev = [
  "codespell[toml]>=2.4.1",
  "pre-commit>=4.2.0",
  "pyright>=1.1.403",
  "ruff>=0.12.4",
]

[tool.codespell]
check-filenames = true
check-hidden = true

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
ignore = ["B011", "E501"]
pydocstyle = { convention = "google" }
select = [
  "ASYNC", # flake8-async
  "B",     # bugbear
  "B9",
  "C4",    # flake8-comprehensions
  "E",     # pycodestyle (error)
  "F",     # pyflakes
  "FA",    # flake8-future-annotations
  "I",     # isort
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PYI",   # flake8-pyi
  "RUF",
  "SIM",   # flake8-simplify
  "T20",   # flake8-print
  "UP",    # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["evedata"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T20"] # Ignore print statements in scripts

[tool.uv]
default-groups = ["dev"]
package = false
required-version = ">=0.8.0,<0.9"
